--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                         <p>the quick fox jumps over the 
                            <br> lazy dog</p>
                            <div class="social">
-                             <img src="folder.img/facebook-img.png" alt="">
-                             <img src="folder.img/insatgram-img.png" alt="">
-                             <img src="folder.img/twitter-img.png" alt="">
+                             <img src="folder.img/facebook-img.png" alt="" class="img-footer-1">
+                             <img src="folder.img/insatgram-img.png" alt="" class="img-footer-1">
+                             <img src="folder.img/twitter-img.png" alt="" class="img-footer-1">
                            </div>
                     </div>
                     <div class="col" id="comapany-info">
